<resources>
    <string name="app_name">EduLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EduLife</string>
    <string name="nav_header_subtitle">Pocket</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Configuración</string>
    <string name="action_support">Soporte</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_plan">Planteles</string>
    <string name="menu_news">Noticias</string>
    <string name="menu_func">Funciones</string>
    <string name="menu_iniS">Iniciar Sesion</string>

    <string name="func_calendar">Agenda</string>
    <string name="func_coffe">Cafeteria</string>
    <string name="func_notes">Cuadernos</string>
    <string name="func_pays">Pagos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>