<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_func"
        android:name="com.example.dgtipocket.ui.func.FuncFragment"
        android:label="@string/menu_func" />
    <fragment
        android:id="@+id/nav_iniS"
        android:name="com.example.dgtipocket.ui.iniS.IniSFragment"
        android:label="@string/menu_iniS" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dgtipocket.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_plan"
        android:name="com.example.dgtipocket.ui.plan.PlanFragment"
        android:label="@string/menu_plan" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.dgtipocket.ui.news.NewsFragment"
        android:label="@string/menu_news" />
</navigation>